--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Jayesh Ikhar",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
   }
 }
