--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://jayesh:your-password@cluster0.z33uv.mongodb.net
 CORS_ORIGIN = * 
+ACCESS_TOKEN_SECRET = jayesh-ikhar
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = jayesh-learning-backend
+REFRESH_TOKEN_EXPIRY = 10d
